# nomad-docs

./: .gitignore  404.html  README.md  aitoolkit.html  index.html  mkdocs.yml  pyproject.toml  todo.html  tutorials_template.html  writing_guide.html
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: deploy-docs.yml  discord-release-announcement.yml  gemini-cli.yml  publish.yml  release-drafter.yml  release-notes.yml  test-build-and-docs.yml  test-build-lint-preview.yml
docs/: 404.md  aitoolkit.md  index.md  tutorials_template.md  writing_guide.md
docs/examples/: overview.md
docs/explanation/: architecture.md  auth.md  base_sections.md  basics.md  data.md  north.md  oasis.md  plugin_system.md  processing.md
docs/howto/: overview.md
docs/reference/: annotations.md  code_guidelines.md  config.md  glossary.md  plugins.md  tutorials.md
examples/: overview.html
explanation/: architecture.html  auth.html  base_sections.html  basics.html  data.html  north.html  oasis.html  plugin_system.html  processing.html  workflows.html
howto/: overview.html
reference/: annotations.html  basesections.html  cli.html  code_guidelines.html  config.html  glossary.html  parsers.html  plugins.html  tutorials.html
search/: search_index.json
tests/: test_assets.py  test_check_links.py  test_docs.py  test_metainfo.py  test_pydantic.py
tutorial/: access_api.html  custom.html  explore.html  nomad_repo.html  overview.html  upload_publish.html  upload_publish_api.html  upload_publish_crc1415.html  workflows_projects.html
utils/: find_unused_assets.py
(+171 files in other folders)
