[project]
name = "nomad-docs"
version = "0.1.3"
description = "The official NOMAD documentation (starting from 2025)"
readme = "README.md"
authors = [{ name = "Ahmed Ilyas", email = "ahmed.n.ilyas@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "mkdocs-click",
  "click>=8.4.0",  # fix mkdocs livereload
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-glightbox",
  "mkdocs-macros-plugin",
  "mkdocs-material-extensions",
  "mkdocs-material",
  "mkdocs-redirects",
  "mkdocs<2",
  "nomad-lab[infrastructure]>=1.4.2.dev107",
  "pydantic>=2.0",
  "regex",
]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["docs/**"]

[dependency-groups]
dev = ["pytest>=7.4.4"]
